--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,19 @@
 name: network_manager
 description: Dart package which manages data connection.
-version: 2.0.0
+version: 3.0.0
+publish_to: none
+
 # homepage: https://www.example.com
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  data_connection_checker:
-    git:
-      url: git://github.com/uSlashVlad/data_connection_checker.git
-  equatable: ^2.0.0
-  meta: ^1.3.0
-  path: ^1.8.0
+  equatable: ^2.0.3
+  internet_connection_checker: ^0.0.1+4
+  meta: ^1.8.0
+  path: ^1.8.2
 
 dev_dependencies:
-  mocktail: ^0.1.1
-  test: ^1.16.8
+  mocktail: ^0.3.0
+  test: ^1.21.1
   very_good_analysis: ^2.0.0
