--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   equatable: ^2.0.3
   internet_connection_checker: ^0.0.1+4
   meta: ^1.8.0
-  path: ^1.8.2
+  path: ^1.8.1
 
 dev_dependencies:
+  mocktail: ^0.3.0
+  test: ^1.21.1
   very_good_analysis: ^3.0.0
